# workflow_pc_hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Pipfile  README.md  setup.cfg
pre_commit_hooks/: check_process_script_length.py  check_process_script_syntax.py  detect_consecutive_blank_lines.py  detect_non_bash_shebangs.py  detect_single_quote_script_blocks.py  remove_consecutive_blank_lines.py  util.py
test/: test_check_process_script_length.py  test_check_process_script_syntax.py  test_detect_consecutive_blank_lines.py  test_detect_non_bash_shebangs.py  test_detect_single_quote_script_blocks.py  test_remove_consecutive_blank_lines.py  test_util.py
testing/resources/: example.nf  example_fail_non_bash_shebang.nf  example_fail_non_bash_shebang_ignored.nf  example_fail_script_length.nf  example_fail_script_length_ignored.nf  example_fail_script_syntax_check.nf  example_fail_script_syntax_check_ignored.nf  example_fail_single_quote_script_block.nf  example_fail_single_quote_script_block_ignored.nf
