[metadata]
name = nextflow_hooks
description = Some pre-commit hooks for nextflow.
version = 0.1.0
author = Simon Thompson
author_email = alvaradosegurajorge@gmail.com
license = MIT
url = https://jorgealvarado.me

[options]
packages = find:

[options.entry_points]
console_scripts =
    detect-consecutive-blank-lines = pre_commit_hooks.detect_consecutive_blank_lines:main
