[metadata]
name = nextflow_hooks
description = Some pre-commit hooks for nextflow.
version = 0.4.0
author = Simon Thompson

[options]
packages = find:

[options.entry_points]
console_scripts =
    detect-consecutive-blank-lines = pre_commit_hooks.detect_consecutive_blank_lines:main
    check-process-script-syntax = pre_commit_hooks.check_process_script_syntax:main
    remove-single-quote-script-blocks = pre_commit_hooks.remove_single_quote_script_blocks:main
    detect-non-bash-shebangs = pre_commit_hooks.detect_non_bash_shebangs:main
